# Rule-based-Chatbot-in-CPp

./: CMakeLists.txt  Makefile
Features/: Featues to be implemented.txt  Features impremented
include/: advanced_math.h  chatbot.h  speech_recognition.h  system_controls.h  utilities.h  vosk.h
src/: advanced_math.cpp  chatbot.cpp  main.cpp  speech_recognition.cpp  system_controls.cpp  utilities.cpp
